[tool.poetry]
name = "networkintro"
version = "0.1.0"
description = ""
authors = ["evgenii <evgenii.zholobov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
keyboard = "^0.13.5"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
